# django-cookie

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  Pipfile  pyproject.toml
{{cookiecutter.project_name}}/ansible/: playbook.yml
{{cookiecutter.project_name}}/django/: Makefile
{{cookiecutter.project_name}}/django/config/settings/: base.py  dev.py  prod.py
{{cookiecutter.project_name}}/django/docs/source/: conf.py  index.rst
{{cookiecutter.project_name}}/django/static/: package.json
{{cookiecutter.project_name}}/django/templates/: base.djhtml
{{cookiecutter.project_name}}/django/webpack/: webpack.config.js
