[tool.poetry]
name = "project_name" # "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "*"
python-dotenv = "*"
psycopg2-binary = "*"
sphinx = "*"
coverage = "*"
django-crispy-forms = "*"
django-extensions = "*"
pillow = "*"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
